--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,13 @@
 
     <string name="tab_hoy">Hoy</string>
     <string name="tab_manana">Mañana</string>
-    <string name="tab_semana">Esta Semana</string>
+    <string name="tab_semana">Todo</string>
 
+    <string name="parse_app_id">0I9QA3cg22aq3fCQbqtpDCWMgIxiu7ZzYhVHUrGZ</string>
+    <string name="parse_client_key">aKV0VWsyid2uPjlyXZMKKe3IhVd4msLUEH63suys</string>
 
+    <string name="nav_menu_inicio">Inicio</string>
+    <string name="nav_menu_agenda">Agenda</string>
+    <string name="nav_menu_campana">Campaña</string>
+    <string name="nav_menu_bici">Bici</string>
 </resources>
