--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="nav_menu_agenda">Agenda</string>
     <string name="nav_menu_campana">Campaña</string>
     <string name="nav_menu_bici">Bici</string>
+
+    <string name="button_detail">Ver Información</string>
 </resources>
