Actions Buttons implementados

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="item_title">Este es un título</string>
     <string name="item_date">12/12/15 - 8:00pm</string>
 
+    <string name="send_to">Enviar a</string>
 
     <string name="tab_hoy">Hoy</string>
     <string name="tab_manana">Mañana</string>
